--- a/Counter/Counter/www/new.html
+++ b/Counter/Counter/www/new.html
@@ -28,9 +28,9 @@
 			<div id="place" class="w3-accordion-content w3-container">
 			<p>
 			<!-- 要從資料庫帶入資料-->
-		    <a href="traet.html" target="b" class="w3-padding">骨科牽引</a>
-			<a href="traet.html" target="b" class="w3-padding">神經運動</a>
-			<a href="traet.html" target="b" class="w3-padding">物理治療</a>
+		    <a href="treat.html" name="b" class="w3-padding">骨科牽引</a>
+			<a href="treat.html" name="b" class="w3-padding">神經運動</a>
+			<a href="treat.html" name="b" class="w3-padding">物理治療</a>
 		
 			</p>
 			</div>
