--- a/Counter/Counter/www/treat.html
+++ b/Counter/Counter/www/treat.html
@@ -16,10 +16,10 @@
 	
 	<body>
 	<!-- Header -->
-	
+	<br><br><br><br><br><br><br><br>
 	<header class="w3-display-container w3-content w3-hide-jumbo" style="max-width:1500px">
 	 <img class="w3-image" src="Rehabilitation.jpg"  width="1500" height="700">
-	  <div class="w3-display-middle" style="width:50%">
+	  <div class="w3-display-middle" style="width:90%">
 		<ul class="w3-navbar w3-black">
 		  <li><a href="javascript:void(0)" class="tablink" onclick="openLink(event,'Plusstre');"><i class="fa fa-plus-square-o  w3-margin-right"></i>新增</a></li>
 		  <li><a href="javascript:void(0)" class="tablink" onclick="openLink(event,'Updatestre');"><i class="fa fa-pencil-square-o w3-margin-right"></i>修改</a></li>
@@ -27,7 +27,7 @@
 		</ul>
 		
 	
-		<!-- Tabs -->	<br><br>
+		<!-- Tabs -->	
 		<div id="Plusstre" class="w3-container w3-white w3-padding-16 myLink">
 		<div class="w3-row-padding" style="margin:0 -16px;"> 
 		<!-- Accordion -->		
