--- a/Counter/Counter/www/top.html
+++ b/Counter/Counter/www/top.html
@@ -43,7 +43,7 @@
         <br>
         <div class=" w3-margin-bottom w3-top">
             <div class="w3-col">
-                <a href="callmain.html" target="b">
+                <a href="qrcode.html" target="b">
                     <div class="w3-right">
                         <h3>Home</h3></div>
                     <div class="w3-left">
