--- a/Counter/Counter/www/top.html
+++ b/Counter/Counter/www/top.html
@@ -54,7 +54,7 @@
             </div>
             <div class="w3-col-quarter">
                 <div class="w3-quarter">
-                    <a target="b">
+                    <a href="check.html" target="b">
                         <div class="w3-container w3-pink w3-hover-red" onClick="openScanner()">
                             <div class="w3-center"><i class="fa fa-qrcode w3-xxlarge"></i></div>
                         </div>
