--- a/Counter/Counter/www/qr.html
+++ b/Counter/Counter/www/qr.html
@@ -50,7 +50,7 @@
     }
     </script>
 
-    <body>
+    <body><br><br><br><br>
         <div class="w3-display-middle" style="width:90%">
             <div class="w3-row-padding" style="margin:0 -16px;">
                 <div class="w3-col">
