--- a/Counter/Counter/www/qr.html
+++ b/Counter/Counter/www/qr.html
@@ -64,10 +64,13 @@
                             <i class="fa fa-circle-o-notch fa-fw w3-margin-right"></i>選擇區域</button>
                         <select id="place" class="w3-accordion-content w3-container">
                             <!-- 要從資料庫帶入資料-->
-                            <option class="w3-padding" value="PT">PT</option>
-                            <option class="w3-padding" value="OT">OT</option>
-                            <option class="w3-padding" value="ST">ST</option>
-                        </select>
+                            <option class="w3-padding" value="NE">神經電療區</option>
+                            <option class="w3-padding" value="NS">神經運動區</option>
+                            <option class="w3-padding" value="OT">骨科職能治療區</option>
+                            <option class="w3-padding" value="OS">骨科運動區</option>
+                            <option class="w3-padding" value="OE">骨科電療區</option>
+							<option class="w3-padding" value="OT">骨科牽引區</option>
+						</select>
                     </div>
                 </div>
                  <div class="w3-col">
