--- a/Counter/Counter/www/index.html
+++ b/Counter/Counter/www/index.html
@@ -11,9 +11,9 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>櫃台</title>
 </head>
-	<frameset rows="35%,*" cols="*">
-        <frame src="top.html" name="top" scrolling="auto" />
-        <frame src="get.html" name="b" scrolling="auto" />
+	<frameset rows="35%,*" border="1">
+        <frame src="top.html" name="top"  />
+        <frame src="get.html" name="b"  />
     </frameset>
 
 </html>
