--- a/Counter/Counter/www/treat.html
+++ b/Counter/Counter/www/treat.html
@@ -14,10 +14,8 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	</head>
 	
-	<body>
-	<!-- Header -->
-	<br><br><br><br><br><br><br><br>
-	<header class="w3-display-container w3-content w3-hide-jumbo" style="max-width:1500px">
+	<body class="w3-display-container w3-content w3-hide-jumbo" style="max-width:1500px">
+
 
 	  <div class="w3-display-middle" style="width:90%">
 		<ul class="w3-navbar w3-black">
@@ -113,7 +111,7 @@
 		</div>
 		</div>
 	 </div>
-	</header>
+	
 	
 
 	<script>
