--- a/Counter/Counter/www/Rhand.html
+++ b/Counter/Counter/www/Rhand.html
@@ -15,13 +15,13 @@
 	}
 	</style>
 	<body>
-		<form action="makeqrcode.php" method="post">
-			<input type="checkbox" name="右大拇指" class="w3-padding">右大拇指<br>
-			<input type="checkbox" name="右食指" class="w3-padding">右食指<br>
-			<input type="checkbox" name="右中指" class="w3-padding">右中指<br>	
-			<input type="checkbox" name="右無名指" class="w3-padding">右無名指<br>
-			<input type="checkbox" name="右小指" class="w3-padding">右小指<br>	
-			<input type="submit"><br>
+		<form action="rehabilitation_scheduling/makeqrcode.php" name="Rhand" method="post">
+			<input type="checkbox" value="右大拇指" name="Rhand[]" class="w3-padding">右大拇指<br>
+			<input type="checkbox" value="右食指" name="Rhand[]" class="w3-padding">右食指<br>
+			<input type="checkbox" value="右中指" name="Rhand[]" class="w3-padding">右中指<br>	
+			<input type="checkbox" value="右無名指" name="Rhand[]" class="w3-padding">右無名指<br>
+			<input type="checkbox" value="右小指" name="Rhand[]" class="w3-padding">右小指<br>	
+			<input type="Submit"><br>
 		</form>
 		 <button>
             <a href="qr.html" class="w3-white w3-navbar w3-white w3-padding-8 w3-card-2" style="text-decoration:none;">返回</a> 
